# pi-musubi-core

./: .cspell.json  .env.example  .gitignore  .mise.toml  AGENTS.md  Makefile  README.md  README_EN.md
apps/backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
apps/backend/docs/: c1_runtime_intake_scope.md  c1_social_trust_intake_contract_scope.md  c1_social_trust_writer_fact_scope.md  c2_bounded_promise_reliability_mutation_fact_persistence.md  coordination_prune_inventory.txt  db_runtime.md  guardrails.md  happy_route_walkthrough.md  http_route_gate_inventory.txt  internal_route_inventory.txt  launch_posture_day1.md  operator_review_workflow.md  ops_observability_slo.md  orchestration_runtime.md  package_boundaries.md  post_c2_legal_hold_writer_fact_non_authority_scope.md  post_c2_master_submaster_operator_seat_runtime_non_authority_scope.md  post_c2_social_trust_categorical_fact_non_consumption_guard.md  projection_read_models.md  proof_primitives.md  provider_adapter_inventory.txt  provider_callsite_inventory.txt  public_route_inventory.txt  raw_transaction_inventory.txt  realm_bootstrap_surface.md  room_progression_surface.md  route_body_limit_gap_inventory.txt  route_body_limit_inventory.txt  schema_skeleton.md  settlement_domain_types.md
apps/backend/migrations/: 0001_create_core_schema.sql  0002_create_dao_schema.sql  0003_create_ledger_schema.sql  0004_create_outbox_schema.sql  0005_create_projection_schema.sql  0006_orchestration_runtime_baseline.sql  0007_happy_route_postgres_truth.sql  0008_fix_outbox_manual_review_constraint.sql  0009_projection_read_model_expansion.sql  0010_projection_backfill_and_meta_bigint.sql  0011_projection_refresh_supporting_indexes.sql  0012_projection_source_fact_count_bigint.sql  0013_projection_trust_backfill.sql  0014_operator_review_appeal_evidence.sql  0015_operator_review_hardening.sql  0016_room_progression_surface.sql  0017_room_progression_actor_consistency.sql  0018_realm_bootstrap_admission.sql  0019_recovery_reconciliation_baseline.sql  0020_social_trust_intake_persistence.sql  0021_c2_categorical_social_trust_fact_persistence.sql  0022_outbox_manual_review_prune_index.sql  0023_promise_completion_writer_fact_persistence.sql
apps/backend/scripts/: guardrail_sweep.sh  http_funded_happy_route_smoke.sh  http_happy_route_smoke.sh
apps/backend/src/: lib.rs  main.rs
apps/backend/tests/: happy_route.rs  launch_posture.rs  (+22 more)
(+174 files in other folders)
