[package]
name = "musubi_backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "crates/core-domain",
    "crates/db-runtime",
    "crates/realm-domain",
    "crates/settlement-domain",
    "crates/orchestration",
    "crates/ops",
]
default-members = [
    ".",
    "crates/core-domain",
    "crates/db-runtime",
    "crates/realm-domain",
    "crates/settlement-domain",
    "crates/orchestration",
    "crates/ops",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "=1.0.203", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
tower-http = { version = "0.6.8", features = ["cors"] }
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
musubi_db_runtime = { path = "crates/db-runtime" }
musubi_settlement_domain = { path = "crates/settlement-domain" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
